Moving things into places.